--- a/Protocolos.Rmd
+++ b/Protocolos.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Protocolos de laboratorio"
+title: "Protocolos de Laboratorio"
 subtitle: 'Laboratorio de genética y genómica aplicada'
 author:
  name: Dr. José A. Gallardo.
